src/test/rustdoc-ui/deny-intra-link-resolution-failure.stderr
error: unresolved link to `v2`
  --> $DIR/deny-intra-link-resolution-failure.rs:3:6
   |
LL | /// [v2]
   |      ^^ unresolved link
   |
note: the lint level is defined here
  --> $DIR/deny-intra-link-resolution-failure.rs:1:9
   |
LL | #![deny(intra_doc_link_resolution_failure)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: aborting due to previous error

