src/test/rustdoc-ui/deny-intra-link-resolution-failure.rs
#![deny(intra_doc_link_resolution_failure)]

/// [v2] //~ ERROR
pub fn foo() {}
